k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: happy-web-app-deployment
  namespace: default
  labels:
    app: happy-web-app
spec:
  selector:
    matchLabels:
      app: happy-web-app
  replicas: 1
  template:
    metadata:
      labels:
        app: happy-web-app
    spec:
      containers:
      - name: happy-web-app
        image: syahdaromstudenttelu/happy-web
        resources:
          requests:
            cpu: 25m
            memory: 25Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 3000
      restartPolicy: Always
