k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: happy-vs
  namespace: istio-ingress
spec:
  gateways:
    - happy-gateway
  hosts:
    - anbutech.xyz
  http:
  - route:
    - destination:
        host: happy-web-app
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: happy-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
      - anbutech.xyz
      port:
        name: http
        number: 80
        protocol: HTTP
